<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F3034"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/spinDiamondsTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/spinning_game"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/wheel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/spinningvalue"
            android:contentDescription="@string/bagian_spinner_yang_berputar" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/spinningborder"
            android:adjustViewBounds="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/border_spinner_diam" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/spinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@drawable/spinbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/tombol_untuk_memutar_spinner" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinDiamondsTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textView3"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/points"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinDiamondsTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/pointTitle"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinButton"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/each_spin_uses_40_points"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>